# pomodoro

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVLOG.md  FARM-PHASE2-SPEC.md  PRODUCT.md  README.md  TASK.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: android.yml  deploy.yml
admin/: index.html  package-lock.json  package.json  tsconfig.json
admin/src/: App.tsx  api.ts  auth.ts
api/: package-lock.json  package.json  tsconfig.json  wrangler.toml
api/src/: index.ts
auth/: package-lock.json  package.json  wrangler.toml
auth/src/: index.ts
docs/: ACHIEVEMENT-DESIGN-v2.md  BADGE-PROMPT-GUIDE.md  CELEBRATION-DESIGN-v1.md  CHANGELOG.md  ENCYCLOPEDIA-v1.md  FARM-DESIGN-v2.md  FARM-DESIGN-v3.md  FARM-ROADMAP-v1.md  MARKET-DESIGN-v1.md  OVERVIEW-v2.md  PHASE6-IMPLEMENTATION-PLAN.md  POMODORO-DESIGN-v2.md  PRODUCT.md  ROADMAP.md  SHED-DESIGN-v2.md
e2e/: debug-toolbar.spec.ts  farm-layout-v023.spec.ts  farm-mobile-square.spec.ts  farm-sky-layer.spec.ts  farm-vitality.spec.ts  gene-inject.spec.ts  gene-lab.spec.ts  market-buy.spec.ts  market-sell.spec.ts  mutation.spec.ts  phase6-step1-fusion.spec.ts  phase6-step2-darkmatter.spec.ts  phase6-step3-weather-life.spec.ts  phase6-step4-weekly-shop.spec.ts  thief-items.spec.ts
scripts/: generate-icons.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/achievements/: definitions.ts  detection.ts  index.ts  types.ts
src/audio/: context.ts  index.ts  mixer.ts
src/components/: AchievementCelebration.tsx  CodeInput.tsx  (+34 more)
(+63 files in other folders)
