[package]
name = "watermelon-clock"
version = "0.1.2"
description = "Watermelon Clock — A Pomodoro timer with watermelon growth theme"
authors = ["Charles Yu"]
edition = "2021"

[lib]
name = "watermelon_clock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
